modification du head

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                         <p class="btn_new">Nouveau</p>
                         <div class="restaurant_card_text">
-                            <h4 class="restaurant_card_title">La enchantée</h4>
+                            <h4 class="restaurant_card_title">La note enchantée</h4>
                             <p class="restaurant_card_subtitle">Charonne</p>
 
                         </div>
