--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./sass/style.scss">
+    <title>ohmyfood</title>
+    <!--Google font-->
+    <script src="https://kit.fontawesome.com/0b6d538c32.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./assets/logo/ohmyfood.png">
+    <!--Google family-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img class="logo_img" src="./assets/logo/ohmyfood.png" alt="logo.ohmyfood"/>
+            <img src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo de La palette du gout" title="cliquez pour agrandir" /></a>
+
             <a href="./index.html">
                 <i class="fas fa-arrow-left"></i>
             </a>
