--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./sass/style.scss">
+    <title>ohmyfood</title>
+    <!--Google font-->
+    <script src="https://kit.fontawesome.com/0b6d538c32.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./assets/logo/ohmyfood.png">
+    <!--Google family-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,7 +26,7 @@
 
     <!--Image des plats-->
     <div class="image_restaurant">
-        <img src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo de Ala française"/>
+        <img src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo de Le délice des sens"/></a>
     </div>
 
     <!--Carte du resto-->
