ajout du mail pour le contact

--- a/sass/pages-menus/la-note-enchantee.html
+++ b/sass/pages-menus/la-note-enchantee.html
@@ -263,7 +263,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="mailt:email@example.com">
                         <p class="footer__li">Contacts</p>
                     </a>
                 </li>
