--- a/sass/pages-menus/le-délice-des-sens.html
+++ b/sass/pages-menus/le-délice-des-sens.html
@@ -241,7 +241,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="mailt:email@example.com">
                         <p class="footer__li">Contacts</p>
                     </a>
                 </li>
