--- a/sass/pages-menus/à-la-française.html
+++ b/sass/pages-menus/à-la-française.html
@@ -244,7 +244,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="mailt:email@example.com">
                         <p class="footer__li">Contacts</p>
                     </a>
                 </li>
