--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <!-- importation de awesome fonts -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <title>OhMyFood</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/index.css">
+
+
+    <title>Accueil - ohmyfood!</title>
+    <meta name="title" content="Accueil - ohmyfood!">
+    <meta name="description" content="Ohmyfood! est une entreprise de commande de repas en ligne. Notre concept permet aux utilisateurs de composer leur propre menu et réduire leur temps d’attente dans les restaurants.">
+
+
 </head>
 
 <body>
@@ -18,166 +22,130 @@
         <div class="spinner"><span class="spinner__text">Chargement</span></div>
     </div>
 
-    <!-- Entete de la page -->
-    <header>
-        <a href="index.html">
-            <i class="fa-solid fa-arrow-left header__arrow" id="no_arrow"></i>
-        </a>
-        <img src="./assets/logo/ohmyfood.png" alt="ohmyfood logo" class="header__logo" />
+    <header class="header">
+        <h1 class="header__logo">ohmyfood</h1>
     </header>
 
-    <!-- Contenu de la page -->
     <main>
-        <!--Boutton de Localisation-->
-        <section id="localiser">
-            <button class="localiser--button">
-          <span><i class="fa-solid fa-location-dot locator__icon"></i></span>
-          <span>Paris, Belville</span>
-        </button>
-        </section>
-        <!--Presentation du site -->
-        <section id="presentation">
-            <h1 class="presentation--title">Réservez le menu qui vous convient</h1>
-            <p class="presentation--text">
-                Découvrez des restaurants d'exception, sélectionnés par nos soins.
+        <div class="local">
+            <i class="fas fa-map-marker-alt local__icon"></i>
+            <span class="local__text">Paris, Belleville</span>
+        </div>
+
+        <section class="hero">
+            <h2 class="hero__title">Réservez le menu qui<br>vous convient</h2>
+            <p class="hero__subtitle">
+                Découvrez des restaurants d'exception, séléctionnés par nos soins
             </p>
-            <a href="#restaurants" class="btn">
-          Explorez nos restaurants
-          <div class="btn__bg"></div>
-        </a>
+            <a class="hero__btn">
+        Explorer nos restaurants
+      </a>
         </section>
-        <!--Guide d'utilisation-->
-        <section id="guide">
-            <h2 class="page_titles">Fonctionnement</h2>
-            <ol class="guide__list">
-                <li class="bull">
-                    <span class="bull--numb">1</span>
-                    <i class="fa-solid fa-mobile-screen-button bull--icon"></i>
-                    <span class="bull--text">Choisissez un restaurant</span>
-                </li>
-                <li class="bull">
-                    <span class="bull--numb">2</span>
-                    <i class="fa-solid fa-list-ul bull--icon"></i>
-                    <span class="bull--text">Composez votre menu</span>
-                </li>
-                <li class="bull">
-                    <span class="bull--numb">3</span>
-                    <i class="fa-solid fa-store bull--icon"></i>
-                    <span class="bull--text">Dégustez au restaurant</span>
-                </li>
-            </ol>
+
+        <section class="tuto">
+            <div class="container">
+                <h2 class="tuto__title">Fonctionnement</h2>
+                <ol class="tuto__steps">
+                    <li class="tuto__step">
+                        <i class="tuto__icon fas fa-mobile-alt"></i>
+                        <span class="text">Choisissez un restaurant</span>
+                    </li>
+                    <li class="tuto__step">
+                        <i class="tuto__icon fas fa-list-ul"></i>
+                        <span class="text">Composez votre menu</span>
+                    </li>
+                    <li class="tuto__step">
+                        <i class="tuto__icon fas fa-store"></i>
+                        <span class="text">Dégustez au restaurant</span>
+                    </li>
+                </ol>
+            </div>
         </section>
-        <!--Presentation des restaurants -->
-        <section id="restaurants">
-            <h2 class="page_titles">Restaurants</h2>
-            <div class="stores_list">
-                <!--Carte - La palette du goût-->
-                <div class="card">
-                    <a href="pages-menus/la-palette-du-gout.html">
-                        <img class="card__img" src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
+
+        <section class="restaurants" id="restaurants">
+            <div class="container">
+                <h2 class="restaurants__title">Restaurants</h2>
+
+                <div class="cards">
+                    <a class="card" href="pages_menus/la-palette-du-gout.html">
+                        <img src="src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="card__img">
+                        <span class="card__badge">Nouveau</span>
+                        <footer class="card__footer">
+                            <div class="card__content">
+                                <h3 class="card__title">La palette du goût</h3>
+                                <span class="card__subtitle">Ménilmontant</span>
+                            </div>
+                            <div class="menu__btn card__btn">
+                                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
                     </a>
-                    <div class="card__descr">
-                        <a class="card__descr--text" href="pages-menus/la-palette-du-gout.html">
-                            <h3>La palette du goût</h3>
-                            <span>Ménilmontant</span>
-                        </a>
-                        <!--Coeur-->
-                        <div class="heart--bloc">
-                            <i class="fa-regular fa-heart heart heart__empty">
-                  <i class="fa-solid fa-heart heart heart__full"></i>
-                            </i>
-                        </div>
-                    </div>
-                </div>
-                <!--Carte - La note enchantée-->
-                <div class="card">
-                    <a href="pages-menus/la-note-enchantee.html">
-                        <img class="card__img" src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+
+                    <a class="card" href="pages_menus/la-note-enchantee.html">
+                        <img src="src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="card__img">
+                        <span class="card__badge">Nouveau</span>
+                        <footer class="card__footer">
+                            <div class="card__content">
+                                <h3 class="card__title">La note enchantée</h3>
+                                <span class="card__subtitle">Charonne</span>
+                            </div>
+                            <div class="menu__btn card__btn">
+                                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
                     </a>
-                    <div class="card__descr">
-                        <a class="card__descr--text" href="pages-menus/la-note-enchantee.html">
-                            <h3>La note enchantée</h3>
-                            <span>Charone</span>
-                        </a>
-                        <!--Coeur-->
-                        <div class="heart--bloc">
-                            <i class="fa-regular fa-heart heart heart__empty">
-                  <i class="fa-solid fa-heart heart heart__full"></i>
-                            </i>
-                        </div>
-                    </div>
-                </div>
-                <!--Carte - À la francaise-->
-                <div class="card">
-                    <a href="pages-menus/à-la-française.html">
-                        <img class="card__img" src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la francaise" />
+
+                    <a class="card" href="pages_menus/a-la-francaise.html">
+                        <img src="src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="card__img">
+                        <!-- <span class="card__badge">Nouveau</span> -->
+                        <footer class="card__footer">
+                            <div class="card__content">
+                                <h3 class="card__title">À la française</h3>
+                                <span class="card__subtitle">Cité Rouge</span>
+                            </div>
+                            <div class="menu__btn card__btn">
+                                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
                     </a>
-                    <div class="card__descr">
-                        <a class="card__descr--text" href="pages-menus/à-la-française.html">
-                            <h3>À la francaise</h3>
-                            <span>Cité Rouge</span>
-                        </a>
-                        <!--Coeur-->
-                        <div class="heart--bloc">
-                            <i class="fa-regular fa-heart heart heart__empty">
-                  <i class="fa-solid fa-heart heart heart__full"></i>
-                            </i>
-                        </div>
-                    </div>
-                </div>
-                <!--Carte - Le délice des sens-->
-                <div class="card">
-                    <a href="pages-menus/le-délice-des-sens.html">
-                        <img class="card__img" src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" />
+
+                    <a class="card" href="pages_menus/le-delice-des-sens.html">
+                        <img src="src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="card__img">
+                        <!-- <span class="card__badge">Nouveau</span> -->
+                        <footer class="card__footer">
+                            <div class="card__content">
+                                <h3 class="card__title">Le délice des sens</h3>
+                                <span class="card__subtitle">Folie-Méricourt</span>
+                            </div>
+                            <div class="menu__btn card__btn">
+                                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+                            </div>
+                        </footer>
                     </a>
-                    <div class="card__descr">
-                        <a class="card__descr--text" href="pages-menus/le-délice-des-sens.html">
-                            <h3>Le délice des sens</h3>
-                            <span>Folie-Méricourt</span>
-                        </a>
-                        <!--Coeur-->
-                        <div class="heart--bloc">
-                            <i class="fa-regular fa-heart heart heart__empty">
-                  <i class="fa-solid fa-heart heart heart__full"></i>
-                            </i>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <!-- Pied de la page-->
-    <footer>
-        <div class="footer__framing">
-            <img src="./assets/logo/ohmyfood@2x.svg" alt="ohmyfood logo svg" class="footer__logo" />
-
-            <ul class="footer__ul">
-                <li>
-                    <a href="#">
-                        <p class="footer__li">
-                            <i class="fa-solid fa-utensils footer--icon"></i> Proposer un restaurant
-                        </p>
-                    </a>
+    <footer class="footer">
+        <div class="container">
+            <span class="footer__logo">ohmyfood</span>
+            <ul class="footer__list">
+                <li class="footer__listElt">
+                    <a class="footer__link" href="#"><i class="footer__icon fas fa-utensils"></i>Proposer un restaurant</a>
                 </li>
-
-                <li>
-                    <a href="#">
-                        <p class="footer__li">
-                            <i class="fa-solid fa-handshake-angle footer--icon"></i> Devenir partenaire
-                        </p>
-                    </a>
+                <li class="footer__listElt">
+                    <a class="footer__link" href="#"><i class="footer__icon fas fa-hands-helping"></i>Devenir partenaire</a>
                 </li>
-
-                <li>
-                    <a href="#">
-                        <p class="footer__li">Mentions légales</p>
-                    </a>
+                <li class="footer__listElt">
+                    <a class="footer__link" href="#">Mentions légales</a>
                 </li>
-                <li>
-                    <a href="mailt:email@example.com">
-                        <p class="footer__li">Contacts</p>
-                    </a>
+                <li class="footer__listElt">
+                    <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
                 </li>
             </ul>
         </div>
